fixed flex-wraped left/right heights

--- a/styles/Details.module.scss
+++ b/styles/Details.module.scss
@@ -1,14 +1,22 @@
 @import "../theme/theme";
 
-.details_container { min-height: calc(100vh - 100px); width: 100%; display: flex; flex-wrap: wrap; }
+.details_container { min-height: calc(100vh - 100px); width: 100%; display: flex; flex-wrap: wrap; overflow-y: scroll; }
 
-.details_container_left { flex: 1 1 60%; min-height: 50vh !important; justify-content: center; align-items: center; }
+.details_container_left { flex: 1 1 60%; justify-content: center; align-items: center; }
+@media (max-width: 800px) {
+    .details_container_left { height: 40vh; }
+}
 
     .details_image_containter { width: 100%; height: 100%; position: relative; }
 
-    .details_image { width: 100%; height: 100%; }
+    .details_image { width: 100%; height: 100%; position: relative; }
 
 .details_container_right {  flex: 1 1 40%; min-width: 30ch; background-color: $light; font-family: 'Lato', sans-serif; }
+@media (max-width: 800px) {
+    .details_container_right { height: 60vh; }
+}
+
+    .details_form_container { position: relative; width: 100%; height: 100%; }
 
     .details_title_container { width: 100%; height: 70px; background-color: $primary; display: flex; flex-direction: row; justify-content: center; padding: 0px;
         display: -webkit-box; display: -ms-flexbox; -webkit-box-pack: center; -ms-flex-pack: center; }
